tests/paczka2/big_fuzzy/84227900.err
Error in line 17: xASj3N A250 52,8
Error in line 30: IKFU A250 95,7
Error in line 32: Wk6RDOrN A939 17,0
Error in line 39: Wk6RDOrN A250 -4,0
Error in line 36: Ud6w74f A250 30,6
Error in line 42: q8CTVoRb A939 74,5
Error in line 49: q8CTVoRb S56 43,0
Error in line 37: Wk6RDOrN A250 80,6
Error in line 85: S56 A937 58,7
Error in line 95: Ud6w74f A937 78,6
Error in line 108: q8CTVoRb S56 -4,1
Error in line 115: Ud6w74f A939 97,N
Error in line 116: S56 A250 49,3
Error in line 126: xASj3N S56 57,7
Error in line 122: q8CTVoRb A937 96,8
Error in line 145: Ud6w74f A250 43,2
Error in line 153: Ud6w74f S56 86,3
Error in line 157: S56 A250 7,4
Error in line 159: S56 A937 8,4
Error in line 158: Wk6RDOrN S56 61,8
Error in line 156: Ud6w74f A937 2,7
Error in line 163: q8CTVoRb A937 54,9
Error in line 165: q8CTVoRb S56 15,5
Error in line 164: Ud6w74f A939 95,8
Error in line 168: Ud6w74f A937 46,7
Error in line 178: 56 A937 86,9
Error in line 160: S56 A250 97,5
Error in line 184: Wk6RDOrN A250 77,3
Error in line 192: xASj3N A250 63,4
Error in line 195: xASj3N A939 78,6
Error in line 181: S56 A937 171,2
Error in line 196: Ud6w74f A250 73,5
Error in line 201: Wk6RDOrN A937 190,4
Error in line 204: Ud6w74f A937 21,6
Error in line 200: S56 A939 63,1
Error in line 206: Wk6RDOrN S56 12,0
Error in line 207: Ud6w74f A939 43,7
Error in line 209: S56 S56 55,7
Error in line 220: xASj3N A937 43,9
Error in line 228: Ud6w74f A939 21,3
Error in line 229: Wk6RDOrN A937 89,1
Error in line 236: Ud6w74f A939 72,4
Error in line 242: S56 A937 58,90
Error in line 244: IKFU A939 45,7
Error in line 249: IKFU S56 399,2
